fixed gcc argument order in Makefiles; changed home page URL to point to sourceforge
git-svn-id: https://svn.code.sf.net/p/acme-crossass/code-0/trunk@5 4df02467-bbd4-4a76-a152-e7ce94205b78

--- a/src/Makefile.dos
+++ b/src/Makefile.dos
@@ -8,11 +8,12 @@ RM		= rm
 PROGS		= acme
 #BINDIR		= /usr/local/bin
 #USERBIN	= $(HOME)/bin
+OBJS		= acme.o alu.o cliargs.o cpu.o dynabuf.o encoding.o flow.o global.o input.o label.o macro.o mnemo.o output.o platform.o section.o tree.o
 
 all: $(PROGS)
 
-acme: acme.o alu.o cliargs.o cpu.o dynabuf.o encoding.o flow.o global.o input.o label.o macro.o mnemo.o output.o platform.o section.o tree.o
-	$(CC) $(LIBS) $(CFLAGS) -o acme.out acme.o alu.o cliargs.o cpu.o dynabuf.o encoding.o flow.o global.o input.o label.o macro.o mnemo.o output.o platform.o section.o tree.o
+acme: $(OBJS)
+	$(CC) $(CFLAGS) -o acme.out $(OBJS) $(LIBS)
 	copy /b \djgpp\bin\pmodstub.exe + acme.out acmepmod.exe
 	djp acme.exe
 	djp acmepmod.exe
