--- a/src/Makefile.mingw
+++ b/src/Makefile.mingw
@@ -15,8 +15,8 @@ USERBIN		= $(HOME)/bin
 
 all: $(PROGS)
 
-acme.exe: acme.o alu.o basics.o cliargs.o cpu.o dynabuf.o encoding.o flow.o global.o input.o label.o macro.o mnemo.o output.o platform.o section.o tree.o _dos.o resource.res
-	$(CC) $(LIBS) $(CFLAGS) -o acme acme.o alu.o basics.o cliargs.o cpu.o dynabuf.o encoding.o flow.o global.o input.o label.o macro.o mnemo.o output.o platform.o section.o tree.o resource.res
+acme.exe: acme.o alu.o basics.o cliargs.o cpu.o dynabuf.o encoding.o flow.o global.o input.o label.o macro.o mnemo.o output.o platform.o section.o tree.o typesystem.o_dos.o resource.res
+	$(CC) $(LIBS) $(CFLAGS) -o acme acme.o alu.o basics.o cliargs.o cpu.o dynabuf.o encoding.o flow.o global.o input.o label.o macro.o mnemo.o output.o platform.o section.o tree.o typesystem.o resource.res
 	strip acme.exe
 
 
@@ -52,6 +52,8 @@ platform.o: config.h platform.h platform.c
 section.o: config.h dynabuf.h global.h section.h tree.h section.h section.c
 
 tree.o: config.h dynabuf.h global.h label.h tree.h tree.c
+
+typesystem.o: config.h global.h typesystem.h typesystem.c
 
 # _dos.o: _dos.h
 
