--- a/src/Makefile.dos
+++ b/src/Makefile.dos
@@ -8,7 +8,7 @@ RM		= rm
 PROGS		= acme
 #BINDIR		= /usr/local/bin
 #USERBIN	= $(HOME)/bin
-OBJS		= acme.o alu.o cliargs.o cpu.o dynabuf.o encoding.o flow.o global.o input.o label.o macro.o mnemo.o output.o platform.o section.o tree.o typesystem.o
+OBJS		= acme.o alu.o cliargs.o cpu.o dynabuf.o encoding.o flow.o global.o input.o macro.o mnemo.o output.o platform.o section.o symbol.o tree.o typesystem.o
 
 all: $(PROGS)
 
@@ -18,9 +18,9 @@ acme: $(OBJS)
 	djp acme.exe
 	djp acmepmod.exe
 
-acme.o: config.h platform.h acme.h alu.h cpu.h dynabuf.h encoding.h flow.h global.h input.h label.h macro.h mnemo.h output.h section.h acme.h acme.c
+acme.o: config.h platform.h acme.h alu.h cpu.h dynabuf.h encoding.h flow.h global.h input.h macro.h mnemo.h output.h section.h symbol.h acme.h acme.c
 
-alu.o: config.h platform.h cpu.h dynabuf.h encoding.h global.h input.h label.h section.h tree.h alu.h alu.c
+alu.o: config.h platform.h cpu.h dynabuf.h encoding.h global.h input.h section.h symbol.h tree.h alu.h alu.c
 
 cliargs.o: cliargs.h cliargs.c
 
@@ -30,15 +30,13 @@ dynabuf.o: config.h acme.h global.h input.h dynabuf.h dynabuf.c
 
 encoding.o: config.h alu.h acme.h dynabuf.h global.h output.h input.h tree.h encoding.h encoding.c
 
-flow.o: config.h acme.h alu.h dynabuf.h global.h input.h label.h macro.h mnemo.h tree.h flow.h flow.c
+flow.o: config.h acme.h alu.h dynabuf.h global.h input.h macro.h mnemo.h symbol.h tree.h flow.h flow.c
 
-global.o: config.h platform.h acme.h cpu.h input.h label.h macro.h section.h global.h global.c
+global.o: config.h platform.h acme.h cpu.h input.h macro.h section.h symbol.h global.h global.c
 
 input.o: config.h dynabuf.h global.h section.h tree.h input.h input.c
 
-label.o: config.h acme.h alu.h cpu.h dynabuf.h global.h input.h mnemo.h section.h tree.h label.h label.c
-
-macro.o: config.h acme.h alu.h dynabuf.h global.h input.h label.h section.h tree.h macro.h macro.c
+macro.o: config.h acme.h alu.h dynabuf.h global.h input.h section.h symbol.h tree.h macro.h macro.c
 
 mnemo.o: config.h alu.h cpu.h dynabuf.h global.h input.h output.h tree.h mnemo.h mnemo.c
 
@@ -48,7 +46,9 @@ platform.o: config.h platform.h platform.c
 
 section.o: config.h dynabuf.h global.h section.h tree.h section.h section.c
 
-tree.o: config.h dynabuf.h global.h label.h tree.h tree.c
+symbol.o: config.h acme.h alu.h cpu.h dynabuf.h global.h input.h mnemo.h section.h tree.h symbol.h symbol.c
+
+tree.o: config.h dynabuf.h global.h symbol.h tree.h tree.c
 
 typesystem.o: config.h global.h typesystem.h typesystem.c
 
