--- a/contrib/toacme/src/Makefile.riscos
+++ b/contrib/toacme/src/Makefile.riscos
@@ -19,7 +19,7 @@ f8ab.o: config.h ab.h acme.h io.h mnemo.h scr2iso.h f8ab.c
 
 giga.o: config.h acme.h gighyp.h io.h mnemo.h pet2iso.h giga.c
 
-gighyp.o: config.h io.h pet2iso.h gighyp.h gighyp.c
+gighyp.o: config.h acme.h io.h pet2iso.h gighyp.h gighyp.c
 
 hypra.o: config.h acme.h gighyp.h io.h pet2iso.h hypra.c
 
@@ -40,8 +40,8 @@ scr2iso.o: config.h scr2iso.h scr2iso.c
 version.o: config.h version.c
 
 toacme: ab.o ab3.o acme.o f8ab.o giga.o gighyp.o hypra.o io.o main.o mnemo.o obj.o pet2iso.o platform.o scr2iso.o version.o
-	$(CC) $(LIBS) $(CFLAGS) -o toacme ab.o ab3.o acme.o f8ab.o giga.o gighyp.o hypra.o io.o main.o mnemo.o obj.o pet2iso.o platform.o scr2iso.o version.o
-	Squeeze -f -v toacme
+	$(CC) $(LIBS) $(CFLAGS) -o !Unsqueezed ab.o ab3.o acme.o f8ab.o giga.o gighyp.o hypra.o io.o main.o mnemo.o obj.o pet2iso.o platform.o scr2iso.o version.o
+	Squeeze -f -v !Unsqueezed toacme
 
 #clean:
 #	-$(RM) -f *.o $(PROGS) *~ core
