fixed a bug and added test files
git-svn-id: https://svn.code.sf.net/p/acme-crossass/code-0/trunk@337 4df02467-bbd4-4a76-a152-e7ce94205b78

--- a/testing/Makefile
+++ b/testing/Makefile
@@ -1,13 +1,26 @@
 
 .SILENT:
 
-all:
+.PHONY: cpus errors warnings
+
+all: bugfixes cpus errors warnings
+
+bugfixes:
+	echo "Testing bugfixes..."
+	echo
+	make -C bugfixes
+
+cpus:
 	echo "Testing CPUs..."
 	echo
 	make -C cpus
+
+errors:
 	echo "Testing errors..."
 	echo
 	make -C errors
+
+warnings:
 	echo "Testing warnings..."
 	echo
 	make -C warnings
