more automatic testing
git-svn-id: https://svn.code.sf.net/p/acme-crossass/code-0/trunk@338 4df02467-bbd4-4a76-a152-e7ce94205b78

--- a/testing/Makefile
+++ b/testing/Makefile
@@ -1,9 +1,14 @@
 
 .SILENT:
 
-.PHONY: cpus errors warnings
+.PHONY: auto bugfixes cpus errors warnings
 
-all: bugfixes cpus errors warnings
+all: auto bugfixes cpus errors warnings
+
+auto:
+	echo "Performing self-tests..."
+	echo
+	make -C auto
 
 bugfixes:
 	echo "Testing bugfixes..."
