--- a/src/Makefile.mingw
+++ b/src/Makefile.mingw
@@ -31,7 +31,7 @@ cpu.o: config.h alu.h dynabuf.h global.h input.h mnemo.h output.h tree.h cpu.h c
 
 dynabuf.o: config.h acme.h global.h input.h dynabuf.h dynabuf.c
 
-encoding.o: config.h alu.h acme.h dynabuf.h global.h output.h input.h tree.h encoding.h encoding.c
+encoding.o: encoding.h encoding.c
 
 flow.o: config.h acme.h alu.h dynabuf.h global.h input.h mnemo.h symbol.h tree.h flow.h flow.c
 
