fixed two bugs, added test files, did cleanup bug 1: in some cases "--format" could not override "!to" bug 2: "cannot open output file" resulted in "success" exit code
git-svn-id: https://svn.code.sf.net/p/acme-crossass/code-0/trunk@340 4df02467-bbd4-4a76-a152-e7ce94205b78

--- a/testing/Makefile
+++ b/testing/Makefile
@@ -1,9 +1,9 @@
 
 .SILENT:
 
-.PHONY: auto bugfixes cpus errors warnings
+.PHONY: auto bugfixes cliargs cpus errors warnings
 
-all: auto bugfixes cpus errors warnings
+all: auto bugfixes cliargs cpus errors warnings
 
 auto:
 	echo "Performing self-tests..."
@@ -14,6 +14,11 @@ bugfixes:
 	echo "Testing bugfixes..."
 	echo
 	make -C bugfixes
+
+cliargs:
+	echo "Testing cliargs..."
+	echo
+	make -C cliargs
 
 cpus:
 	echo "Testing CPUs..."
