more test files
git-svn-id: https://svn.code.sf.net/p/acme-crossass/code-0/trunk@342 4df02467-bbd4-4a76-a152-e7ce94205b78

--- a/testing/cliargs/Makefile
+++ b/testing/cliargs/Makefile
@@ -9,6 +9,6 @@ all: outformats
 	echo "Testing cliargs: PASSED"
 	echo
 
-outformats: outformats.a outformats.sh outformat-*.o
+outformats: outformats.a outformats.sh outformat-*.exp
 	echo "Testing output formats:"
 	bash outformats.sh
