--- a/src/Makefile.dos
+++ b/src/Makefile.dos
@@ -18,7 +18,7 @@ acme: $(OBJS)
 	djp acme.exe
 	djp acmepmod.exe
 
-acme.o: config.h platform.h acme.h alu.h cpu.h dynabuf.h encoding.h flow.h global.h input.h macro.h mnemo.h output.h pseudoopcodes.h section.h symbol.h version.h acme.h acme.c
+acme.o: config.h platform.h alu.h cpu.h dynabuf.h encoding.h flow.h global.h input.h macro.h mnemo.h output.h pseudoopcodes.h section.h symbol.h version.h acme.h acme.c
 
 alu.o: config.h platform.h cpu.h dynabuf.h encoding.h global.h input.h section.h symbol.h tree.h alu.h alu.c
 
@@ -36,7 +36,7 @@ global.o: config.h platform.h acme.h cpu.h dynabuf.h encoding.h input.h macro.h 
 
 input.o: config.h alu.h dynabuf.h global.h section.h symbol.h tree.h input.h input.c
 
-macro.o: config.h acme.h alu.h dynabuf.h global.h input.h section.h symbol.h tree.h macro.h macro.c
+macro.o: config.h alu.h dynabuf.h global.h input.h section.h symbol.h tree.h macro.h macro.c
 
 mnemo.o: config.h alu.h cpu.h dynabuf.h global.h input.h output.h tree.h mnemo.h mnemo.c
 
@@ -44,7 +44,7 @@ output.o: config.h global.h output.h output.c
 
 platform.o: config.h platform.h platform.c
 
-pseudoopcodes.o: acme.h alu.h flow.h global.h input.h macro.h output.h symbol.h pseudoopcodes.h pseudoopcodes.c
+pseudoopcodes.o: alu.h flow.h global.h input.h macro.h output.h symbol.h pseudoopcodes.h pseudoopcodes.c
 
 section.o: config.h dynabuf.h global.h symbol.h tree.h section.h section.c
 
