--- a/testing/cliargs/Makefile
+++ b/testing/cliargs/Makefile
@@ -1,13 +1,21 @@
 #ACMEFLAGS	= -v0
 
-.PHONY: outformats
+.PHONY: dialects outformats
 
 .SILENT:
 
-all: outformats
+all: dialects outformats
 	echo
 	echo "Testing cliargs: PASSED"
 	echo
+
+dialects: dialect085.a dialect086.a dialect09406.a dialect09408.a dialect09412.a
+	acme --strict --dialect 0.85 dialect085.a
+	acme --strict --dialect 0.86 dialect086.a
+	acme --strict --dialect 0.94.6 dialect09406.a
+	acme --strict --dialect 0.94.8 dialect09408.a
+	acme --strict --dialect 0.94.12 dialect09412.a
+	$(RM) test.o
 
 outformats: outformats.a outformats.sh outformat-*.exp
 	echo "Testing output formats:"
