another tiny bit of cleanup
git-svn-id: https://svn.code.sf.net/p/acme-crossass/code-0/trunk@350 4df02467-bbd4-4a76-a152-e7ce94205b78

--- a/src/Makefile.riscos
+++ b/src/Makefile.riscos
@@ -25,11 +25,11 @@ cliargs.o: cliargs.h cliargs.c
 
 cpu.o: config.h dynabuf.h global.h mnemo.h tree.h cpu.h cpu.c
 
-dynabuf.o: config.h acme.h global.h input.h dynabuf.h dynabuf.c
+dynabuf.o: config.h global.h input.h dynabuf.h dynabuf.c
 
 encoding.o: encoding.h encoding.c
 
-flow.o: config.h acme.h alu.h dynabuf.h global.h input.h mnemo.h symbol.h tree.h flow.h flow.c
+flow.o: config.h alu.h dynabuf.h global.h input.h mnemo.h symbol.h tree.h flow.h flow.c
 
 global.o: config.h platform.h acme.h cpu.h dynabuf.h encoding.h input.h macro.h pseudoopcodes.h section.h symbol.h global.h global.c
 
@@ -47,7 +47,7 @@ pseudoopcodes.o: alu.h flow.h global.h input.h macro.h output.h symbol.h pseudoo
 
 section.o: config.h dynabuf.h global.h symbol.h tree.h section.h section.c
 
-symbol.o: config.h acme.h alu.h cpu.h dynabuf.h global.h input.h section.h tree.h symbol.h symbol.c
+symbol.o: config.h alu.h cpu.h dynabuf.h global.h input.h section.h tree.h symbol.h symbol.c
 
 tree.o: config.h dynabuf.h global.h symbol.h tree.h tree.c
 
