fixed example programs to not throw warnings
git-svn-id: https://svn.code.sf.net/p/acme-crossass/code-0/trunk@362 4df02467-bbd4-4a76-a152-e7ce94205b78

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,5 +1,5 @@
 ASSEMBLER6502	= acme
-AS_FLAGS	= -v8 -Wtype-mismatch
+AS_FLAGS	= -v8 -Wtype-mismatch --strict
 RM		= rm
 
 PROGS		= c64doubledabble.prg c64misc.prg ddrv128.prg ddrv64.prg macedit.prg reu-detect.prg trigono.o
