in future versions, program counter in pseudopc blocks no longer silently wraps around to zero
git-svn-id: https://svn.code.sf.net/p/acme-crossass/code-0/trunk@398 4df02467-bbd4-4a76-a152-e7ce94205b78

--- a/src/Makefile.riscos
+++ b/src/Makefile.riscos
@@ -39,7 +39,7 @@ macro.o: config.h alu.h dynabuf.h global.h input.h section.h symbol.h tree.h mac
 
 mnemo.o: config.h alu.h cpu.h dynabuf.h global.h input.h output.h tree.h mnemo.h mnemo.c
 
-output.o: config.h global.h output.h output.c
+output.o: config.h cpu.h global.h output.h output.c
 
 platform.o: config.h platform.h platform.c
 
